--- a/templates/index.html
+++ b/templates/index.html
@@ -7,17 +7,43 @@
     margin: 0;
     padding: 0;
 }
+
 body {
     background-color: #F2EEE9;
     font: normal 13px/1.5 Georgia, Serif;
     color: #333;
 }
+.title_block{
+    position: fixed;
+    left: 10px;
+}
+.title{
+    font-size: 30px;
+    color: white;
+    position: relative;
+    border: white;
+}
+h2 {
+    font-size: 16px;
+    display: block;
+}
+.mask{
+	position: fixed;
+	right:-300px;
+	top:0;
+	bottom: 0;
+	color:#fff;
+	width :300px;
+	background: #333;
+	text-align: center;
+	/*加出来的动画*/
+	transition: right 0.5s;
+}
 .wrapper {
-    width: 705px;
-    margin: 20px auto;
+    width: 800px;
+    margin: 10px auto;
     padding: 20px;
 }
-
 .items {
     display: block;
     margin: 20px 0;
@@ -26,41 +52,33 @@ body {
     background-color: #fff;
     float: left;
     margin: 0 10px 10px 0;
-    width: 205px;
+    width: 235px;
     padding: 10px;
     height: 220px;
 }
 .img_block{
     background-color: #fff;
     float: left;
-    width: 205px;
-    height: 100px;
+    width: 235px;
+    height: 120px;
 }
 .name_block{
     background-color: #fff;
+    margin: 0 4px;
     float: left;
-    width: 205px;
-    height: 80px;
+    width: 240px;
+    height: 50px;
 }
-
+.game_tag{
+    margin: 0 4px 4px;
+    font-size: 16px;
+}
 .item img {
     display: block;
     margin: auto;
     width: 100%;
 }
-h1{
-    display: block;
-    position:relative;
-    font-size: 48px;
-}
-h2 {
-    font-size: 16px;
-    display: block;
-    margin: 0 0 10px 0;
-    padding: 0 0 5px 0;
-}
 .details {
-    /*border: 1px solid #722A1B;*/
     padding: 4px 14px;
     background-color: #fff;
     color: #722A1B;
@@ -69,10 +87,11 @@ h2 {
     margin: auto 0;
     font-weight: bold;
     cursor: pointer;
-    /*position: relative;*/
 }
 .price{
-font-size: 16px;
+    font-size: 18px;
+    margin: 0 4px;
+
 }
 .load_block{
     text-align: center;
@@ -82,10 +101,83 @@ font-size: 16px;
     position: relative;
     font-size: 24px;
     cursor: pointer;
-
 }
 span {
     float: right;
+}
+nav{
+width: 100%;
+height: 50px;
+background: rgba(1, 1, 1, 0.7);
+
+position: fixed;
+top: 0;
+}
+.link{
+    list-style: none;
+line-height: 30px;
+float: right;
+position: fixed;
+    right: 20px;
+}
+.link li{
+float: left;
+text-align: center;
+}
+.link a{
+    font-size: 16px;
+    cursor: pointer;
+    padding: 10px 15px;
+    color: white;
+    text-decoration: none;
+    display: block;
+    position: relative;
+}
+.link img{
+    width: 30px;
+    height: 30px;
+}
+#sidebar{
+	/*display: none;*/
+	position: fixed;
+	right:-300px;
+	top:0;
+	bottom: 0;
+	color:#fff;
+	width :300px;
+	background: #333;
+	text-align: center;
+	/*加出来的动画*/
+	transition: right 0.5s;
+}
+#sidebar ul{
+	list-style: none;
+	padding: 0;
+	margin: 0;
+	width: 100%;
+}
+/*侧边栏打开后显示遮罩层，变现出层级效果*/
+.mask{
+	display: none;
+	position: fixed;
+	left: 0;
+	right: 0;
+	top: 0;
+	bottom: 0;
+	background: rgba(0,0,0,0.5);
+}
+/*右侧边栏*/
+#sidebar ul a{
+
+	padding:10px 20px;
+	display: inline-block;
+	text-decoration: none;
+	color:#fff;
+	width: 100%;
+}
+#sidebar ul a:hover{
+	background: #444;;
+	width: 100%
 }
 
     </style>
@@ -98,20 +190,60 @@ span {
         		}});
         	});
         });
-    </script>
-    <script>
          function load_detail(url,name){
             window.open(url);
             $.get("/click", {msg: name}).done();
         }
+        $(function(){
+          'use strict';
+           var sidebar = $('#sidebar'); //选择侧栏
+           var mask=$(".mask"); //选择遮罩
+           // var backButton = $('.back-to-top'); //选择返回顶部
+           var sidebar_trigger=$('#sidebar_trigger');//选择侧栏触发器
+
+            function showSidebar(){  //显示侧栏
+              mask.fadeIn();  //显示mask
+              sidebar.animate({'right':0});  //调整侧栏css
+              //sidebar.css('right',0);//两种写法都ok
+              }
+            function hideSideBar(){  //隐藏mask
+                mask.fadeOut();
+                sidebar.css('right',-sidebar.width());
+                console.log("mask");
+              }
+             sidebar_trigger.on('click',showSidebar); //监听侧栏触发器点击
+             mask.click(hideSideBar);   //监听mask
+})
     </script>
-
-
-
 </head>
 <body>
+<nav>
+    <div class="title_block">
+        <a class="title" haref="#">Games Gallary</a>
+    </div>
+        <ul class="link">
+            <li><a onclick="window.open('http://wujiawen.xyz')">
+                About me</a></li>
+            <li ><a onclick="window.open('https://github.com/kevinng77/game_recommen_frontend')">
+                <img src="https://cdn3.iconfinder.com/data/icons/social-rounded-2/72/GitHub-256.png">
+            </a></li>
+            <li id="sidebar_trigger"><a class="fa fa-bars ">
+                <img src="https://static01.imgkr.com/temp/e4fea692aa8d4a5aaa52d9ea269f98e9.png">
+            </a></li>
+        </ul>
+</nav>
+
+<div class="mask"></div>
+<div id="sidebar">
+	<ul>
+		<li><a href="#">list2</a></li>
+		<li><a href="#">list2</a></li>
+		<li><a href="#">list2</a></li>
+		<li><a href="#">list2</a></li>
+	</ul>
+</div>
+
 <div class="wrapper">
-    <h1>Games Gallary</h1>
         <div class="items">
             {% for name,pic,price,url in buffer %}
             <div class="item">
@@ -121,8 +253,11 @@ span {
                 <div class="name_block">
                     <h2>{{name}}</h2>
                 </div>
+                <div class="game_tag">
+                    tag
+                </div>
                 <div>
-                    <a  class="price">Price: <em>${{price}}</em></a>
+                    <a  class="price"><em>${{price}}</em></a>
                     <a class="details"  onclick="load_detail('{{url}}','{{name}}')">
                     <em>Details>></em>
                     </a>
