--- a/static/index.css
+++ b/static/index.css
@@ -3,7 +3,8 @@
     padding: 0;
 }
 body {
-    background-color: #F2EEE9;
+    background-image: url("https://cdn.cloudflare.steamstatic.com/steam/apps/266840/page_bg_generated_v6b.jpg?t=1620145994%27");
+    background-attachment: fixed ;
     font: normal 13px/1.5 Georgia, Serif;
     color: #333;
 }
@@ -20,6 +21,7 @@ body {
 h2 {
     font-size: 16px;
     display: block;
+    color: rgba(230, 230, 230,1);
 }
 .wrapper {
     width: 800px;
@@ -31,7 +33,7 @@ h2 {
     margin: 20px 0;
 }
 .item {
-    background-color: #fff;
+    background: rgba(17, 28, 42, 0.4);
     float: left;
     margin: 0 10px 10px 0;
     width: 235px;
@@ -39,13 +41,11 @@ h2 {
     height: 220px;
 }
 .img_block{
-    background-color: #fff;
     float: left;
     width: 235px;
     height: 120px;
 }
 .name_block{
-    background-color: #fff;
     margin: 0 4px;
     float: left;
     width: 240px;
@@ -54,6 +54,7 @@ h2 {
 .game_tag{
     margin: 0 4px 4px;
     font-size: 16px;
+    color: rgba(230,230,230,1);
 }
 .item img {
     display: block;
@@ -62,8 +63,7 @@ h2 {
 }
 .details {
     padding: 4px 14px;
-    background-color: #fff;
-    color: #722A1B;
+    color: rgb(85,160,203);
     text-transform: uppercase;
     float: right;
     margin: auto 0;
@@ -73,6 +73,8 @@ h2 {
 .price{
     font-size: 18px;
     margin: 0 4px;
+    color: rgba(230, 230, 230,1);
+
 }
 .load_block{
     text-align: center;
@@ -82,6 +84,7 @@ h2 {
     position: relative;
     font-size: 24px;
     cursor: pointer;
+    color: #ffffff;
 }
 span {
     float: right;
