--- a/static/index.css
+++ b/static/index.css
@@ -61,14 +61,29 @@ h2 {
     margin: auto;
     width: 100%;
 }
+.like img{
+    width: 12%;
+    height: 12%;
+    cursor: pointer;
+    float: right;
+    /*position: relative;*/
+}
+.dislike img{
+    width: 17px;
+    height: 17px;
+    cursor: pointer;
+    float: right;
+    margin: 4px 4px;
+}
 .details {
-    padding: 4px 14px;
+    padding: 4px 4px;
     color: rgb(85,160,203);
     text-transform: uppercase;
     float: right;
-    margin: auto 0;
+    margin: 0 0;
     font-weight: bold;
     cursor: pointer;
+    font-family: "Helvetica Neue", Helvetica, Roboto, sans-serif;
 }
 .price{
     font-size: 18px;
@@ -89,6 +104,8 @@ h2 {
 span {
     float: right;
 }
+
+
 nav{
 width: 100%;
 height: 50px;
