update item title css

--- a/templates/index.html
+++ b/templates/index.html
@@ -81,7 +81,7 @@
                 <img src={{pic}} alt="item" />
             </div>
             <div class="name_block">
-                <h2>{{name}}</h2>
+                <a>{{name}}</a>
             </div>
 
             <div class="game_tag">
