--- a/static/index.css
+++ b/static/index.css
@@ -18,10 +18,10 @@ body {
     position: relative;
     border: white;
 }
-h2 {
+.name_block a{
     font-size: 16px;
     display: block;
-    color: rgba(230, 230, 230,1);
+    color: rgba(230, 230, 230,0.88);
 }
 .wrapper {
     width: 800px;
@@ -54,7 +54,7 @@ h2 {
 .game_tag{
     margin: 0 4px 4px;
     font-size: 16px;
-    color: rgba(230,230,230,1);
+    color: rgba(230,230,230,0.88);
 }
 .item img {
     display: block;
@@ -88,7 +88,7 @@ h2 {
 .price{
     font-size: 18px;
     margin: 0 4px;
-    color: rgba(230, 230, 230,1);
+    color: rgba(230, 230, 230,0.88);
 
 }
 .load_block{
