updata like actino

--- a/templates/index.html
+++ b/templates/index.html
@@ -61,7 +61,8 @@
         <li><a class="current_user">{{current_user}}</a></li>
         <li>
         <form action="/update_uid" method="post">
-            <a>login with User ID:</a> <input type="text" name="uid" id="uid">
+            <a>login with User ID:</a>
+            <input type="text" name="uid" id="uid">
             <input type="submit" value="Login">
         </form>
         </li>
