--- a/static/index.css
+++ b/static/index.css
@@ -75,6 +75,26 @@ body {
     float: right;
     margin: 4px 4px;
 }
+.dislike img:active{
+    width: 16px;
+    height: 16px;
+    padding: 0 1px;
+    cursor: pointer;
+    float: right;
+    margin: 4px 4px;
+    opacity: 0.7;
+}
+
+.like img:active{
+    width: 11%;
+    height: 11%;
+    padding: 0.5% 0.5%;
+    cursor: pointer;
+    float: right;
+    position: relative;
+    opacity: 0.7;
+}
+
 .details {
     padding: 4px 4px;
     color: rgb(85,160,203);
@@ -193,6 +213,7 @@ input[type=text]{
     border-style: none;
     border-bottom-color: #ffffff;
     border-bottom-style: groove;
+    float: inside;
 }
 input[type=submit]{
     background-color: rgb(51,51,51);
@@ -202,6 +223,7 @@ input[type=submit]{
     font-weight: bold;
     cursor: pointer;
     border:none;
+    position: relative;
  		}
 .current_user{
     font-size: 40px;
