更新多用户并行推荐，修正不同用户点击行为之间的影响

--- a/static/index.css
+++ b/static/index.css
@@ -225,7 +225,7 @@ input[type=submit]{
     border:none;
     position: relative;
  		}
-.current_user{
+#current_user{
     font-size: 40px;
     margin: 0 0 20px 0;
 }
